Deployment/strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: jwt-web-peer
spec:
  selector:
    matchLabels:
      app: jwt-web
  mtls:
    mode: STRICT
