Deployment/library-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: library-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: https
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: library-credential
    hosts:
    - "*"
