Deployment/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - keycloak.10.64.140.45.nip.io
  rules:
    - host: keycloak.10.64.140.45.nip.io
      http:
        paths:
          - backend:
              serviceName: keycloak
              servicePort: 8080
