Deployment/keycloak-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtual-service
spec:
  hosts:
  - keycloak.test.com                                
  gateways:
  - library-gateway.istio-system.svc.cluster.local    
  http:
  - route:                                          
    - destination:
        host: keycloak
        port:
          number: 8080
