Deployment/library-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-library-deployment 
  labels:
    app: grpc-library 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: grpc-library
  template:
    metadata:
      labels:
        app: grpc-library
    spec:
      containers:
      - name: grpc-library
        image: vitminc/grpc-library-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-library-service
spec:
 type: ClusterIP
 selector:
  app: grpc-library
 ports:
 - name: grpc
   protocol: TCP
   port: 10443
   targetPort: 50051
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-library-virtual-service
spec:
  hosts:
  - grpc.test.com                                
  gateways:
  - grpc-gateway.istio-system.svc.cluster.local    
  http:
  - route:                                          
    - destination:
        host: grpc-library-service
        port:
          number: 10443
---
